[gd_scene load_steps=6 format=3 uid="uid://coo4tb1hi5vki"]

[ext_resource type="Script" path="res://Scenes/Debug/BattleSimSelector.gd" id="1_m2qss"]
[ext_resource type="Texture2D" uid="uid://cqal6qlsn6lgn" path="res://Global Assets/Graphics/Monster Graphics/aconidFront.png" id="1_n2ivh"]
[ext_resource type="Texture2D" uid="uid://n42t1hcagi6l" path="res://Global Assets/Graphics/Type Graphics/School Plates/AlchemyNameplate.png" id="2_ymtdy"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_w2uap"]
bg_color = Color(0.313726, 0.643137, 0.4, 1)
border_width_left = 5
border_width_top = 5
border_width_right = 5
border_width_bottom = 5
corner_radius_top_left = 15
corner_radius_top_right = 15
corner_radius_bottom_right = 15
corner_radius_bottom_left = 15
corner_detail = 20
shadow_color = Color(0, 0, 0, 0.74902)
shadow_size = 10
shadow_offset = Vector2(5, 5)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_rpn7x"]
bg_color = Color(0.141176, 0.141176, 0.141176, 0.596078)
border_width_left = 5
border_width_top = 5
border_width_right = 5
border_width_bottom = 5
border_color = Color(0.478431, 0.478431, 0.478431, 0.67451)
border_blend = true

[node name="BattleSimSelector" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(1, 0.997593)
script = ExtResource("1_m2qss")
isAlly = true

[node name="Info" type="Panel" parent="."]
layout_mode = 0
offset_left = 15.0
offset_top = 15.0
offset_right = 624.0
offset_bottom = 167.0
theme_override_styles/panel = SubResource("StyleBoxFlat_w2uap")

[node name="Header" type="Label" parent="Info"]
layout_mode = 1
offset_left = 10.0
offset_top = 5.04826
offset_right = 224.0
offset_bottom = 39.0483
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 24
text = "Choose a Familiar!"
horizontal_alignment = 1

[node name="FamiliarSelector" type="OptionButton" parent="Info/Header"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -70.0
offset_top = 22.0941
offset_right = 64.0
offset_bottom = 53.0941
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 16

[node name="LineEdit" type="LineEdit" parent="Info/Header/FamiliarSelector"]
layout_mode = 0
offset_left = 139.0
offset_right = 177.0
offset_bottom = 31.0
theme_override_constants/minimum_character_width = 2
theme_override_font_sizes/font_size = 16
placeholder_text = "LVL"
max_length = 2

[node name="MoveInput1" type="OptionButton" parent="Info"]
layout_mode = 1
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -273.0
offset_top = -60.9276
offset_right = -139.0
offset_bottom = -29.9276
grow_horizontal = 0
grow_vertical = 2
theme_override_font_sizes/font_size = 16

[node name="SchoolDisplay" type="TextureRect" parent="Info/MoveInput1"]
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_left = 133.462
offset_top = -20.5121
offset_right = 270.982
offset_bottom = 20.4879
grow_vertical = 2
texture = ExtResource("2_ymtdy")
expand_mode = 3
stretch_mode = 5

[node name="MoveInput2" type="OptionButton" parent="Info"]
layout_mode = 1
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -273.0
offset_top = -16.8214
offset_right = -139.0
offset_bottom = 14.1785
grow_horizontal = 0
grow_vertical = 2
theme_override_font_sizes/font_size = 16

[node name="SchoolDisplay" type="TextureRect" parent="Info/MoveInput2"]
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_left = 133.0
offset_top = -20.5614
offset_right = 270.521
offset_bottom = 20.4386
grow_vertical = 2
texture = ExtResource("2_ymtdy")
expand_mode = 3
stretch_mode = 5

[node name="MoveInput3" type="OptionButton" parent="Info"]
layout_mode = 1
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -273.0
offset_top = 28.2871
offset_right = -139.0
offset_bottom = 59.2871
grow_horizontal = 0
grow_vertical = 2
theme_override_font_sizes/font_size = 16

[node name="SchoolDisplay" type="TextureRect" parent="Info/MoveInput3"]
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_left = 133.462
offset_top = -21.5145
offset_right = 270.982
offset_bottom = 19.4855
grow_vertical = 2
texture = ExtResource("2_ymtdy")
expand_mode = 3
stretch_mode = 5

[node name="BattlerPanel" type="Panel" parent="Info"]
visible = false
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -154.5
offset_top = 8.0
offset_right = 176.5
offset_bottom = 408.0
grow_horizontal = 2
grow_vertical = 0
theme_override_styles/panel = SubResource("StyleBoxFlat_rpn7x")

[node name="FamiliarDisplay" type="TextureRect" parent="Info/BattlerPanel"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -160.5
offset_top = -160.5
offset_right = 160.5
offset_bottom = 160.5
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("1_n2ivh")
expand_mode = 1
stretch_mode = 5

[node name="Domain1Display" type="TextureRect" parent="Info/BattlerPanel"]
layout_mode = 1
offset_left = 3.0
offset_top = 16.0386
offset_right = 170.0
offset_bottom = 69.0386
texture = ExtResource("2_ymtdy")
expand_mode = 1
stretch_mode = 5

[node name="Domain2Display" type="TextureRect" parent="Info/BattlerPanel"]
layout_mode = 0
offset_left = 162.0
offset_top = 16.0386
offset_right = 329.0
offset_bottom = 69.0386
texture = ExtResource("2_ymtdy")
expand_mode = 1
stretch_mode = 5

[node name="SigSchoolDisplay" type="TextureRect" parent="Info/BattlerPanel"]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -167.0
offset_top = -53.0
grow_horizontal = 0
grow_vertical = 0
texture = ExtResource("2_ymtdy")
expand_mode = 1
stretch_mode = 5

[node name="Label" type="Label" parent="Info/BattlerPanel"]
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 16.0
offset_top = -39.5424
offset_right = 184.0
offset_bottom = -8.54242
grow_vertical = 0
theme_override_font_sizes/font_size = 18
text = "Signature School:"

[node name="Label2" type="Label" parent="Info/BattlerPanel"]
layout_mode = 0
offset_left = 11.0
offset_top = -1.35809
offset_right = 179.0
offset_bottom = 29.6419
theme_override_font_sizes/font_size = 18
text = "Domain(s):"

[node name="StatsPanel" type="Panel" parent="Info"]
visible = false
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -311.5
offset_top = 8.0002
offset_right = -160.5
offset_bottom = 408.0
grow_horizontal = 2
grow_vertical = 0
theme_override_styles/panel = SubResource("StyleBoxFlat_rpn7x")

[node name="BwnDisplay" type="Label" parent="Info/StatsPanel"]
layout_mode = 1
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -66.0
offset_top = -197.609
offset_right = 7.0
offset_bottom = -159.609
grow_horizontal = 0
grow_vertical = 2
theme_override_font_sizes/font_size = 24
text = "000"
horizontal_alignment = 1

[node name="VigDisplay" type="Label" parent="Info/StatsPanel"]
layout_mode = 1
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -66.0
offset_top = -139.469
offset_right = 7.0
offset_bottom = -101.469
grow_horizontal = 0
grow_vertical = 2
theme_override_font_sizes/font_size = 24
text = "000"
horizontal_alignment = 1

[node name="WitDisplay" type="Label" parent="Info/StatsPanel"]
layout_mode = 1
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -66.0
offset_top = -78.3219
offset_right = 7.0
offset_bottom = -40.3219
grow_horizontal = 0
grow_vertical = 2
theme_override_font_sizes/font_size = 24
text = "000"
horizontal_alignment = 1

[node name="AmbDisplay" type="Label" parent="Info/StatsPanel"]
layout_mode = 1
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -66.0
offset_top = -18.1771
offset_right = 7.0
offset_bottom = 19.8229
grow_horizontal = 0
grow_vertical = 2
theme_override_font_sizes/font_size = 24
text = "000"
horizontal_alignment = 1

[node name="GrcDisplay" type="Label" parent="Info/StatsPanel"]
layout_mode = 1
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -66.0
offset_top = 40.9653
offset_right = 7.0
offset_bottom = 78.9653
grow_horizontal = 0
grow_vertical = 2
theme_override_font_sizes/font_size = 24
text = "000"
horizontal_alignment = 1

[node name="ResDisplay" type="Label" parent="Info/StatsPanel"]
layout_mode = 1
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -66.0
offset_top = 102.112
offset_right = 7.0
offset_bottom = 140.112
grow_horizontal = 0
grow_vertical = 2
theme_override_font_sizes/font_size = 24
text = "000"
horizontal_alignment = 1

[node name="HrtDisplay" type="Label" parent="Info/StatsPanel"]
layout_mode = 1
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -66.0
offset_top = 163.26
offset_right = 7.0
offset_bottom = 201.26
grow_horizontal = 0
grow_vertical = 2
theme_override_font_sizes/font_size = 24
text = "000"
horizontal_alignment = 1

[node name="Label" type="Label" parent="Info/StatsPanel"]
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_top = -195.0
offset_right = 51.0
offset_bottom = 195.0
grow_vertical = 2
theme_override_font_sizes/font_size = 19
text = "Brawn:

Vigor:

Wit:

Ambition:

Grace:

Resolve:

Heart :"

[node name="Panel" type="Panel" parent="Info/StatsPanel/Label"]
show_behind_parent = true
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_top = -200.0
offset_right = 93.0
offset_bottom = 200.0
grow_vertical = 2

[node name="PointsPanel" type="Panel" parent="Info"]
visible = false
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = 182.5
offset_top = 9.38864
offset_right = 318.5
offset_bottom = 188.389
grow_horizontal = 2
grow_vertical = 0
theme_override_styles/panel = SubResource("StyleBoxFlat_rpn7x")

[node name="HPDisplay" type="Label" parent="Info/PointsPanel"]
layout_mode = 1
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -70.0
offset_top = -80.0923
offset_right = 3.0
offset_bottom = -42.0923
grow_horizontal = 0
grow_vertical = 2
theme_override_font_sizes/font_size = 24
text = "000"
horizontal_alignment = 1

[node name="EngDisplay" type="Label" parent="Info/PointsPanel"]
layout_mode = 1
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -70.0
offset_top = -21.9523
offset_right = 3.0
offset_bottom = 16.0477
grow_horizontal = 0
grow_vertical = 2
theme_override_font_sizes/font_size = 24
text = "000"
horizontal_alignment = 1

[node name="MovDisplay" type="Label" parent="Info/PointsPanel"]
layout_mode = 1
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -70.0
offset_top = 39.1948
offset_right = 3.0
offset_bottom = 77.1948
grow_horizontal = 0
grow_vertical = 2
theme_override_font_sizes/font_size = 24
text = "000"
horizontal_alignment = 1

[node name="Label" type="Label" parent="Info/PointsPanel"]
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_top = -77.4831
offset_right = 68.0
offset_bottom = 75.5169
grow_vertical = 2
theme_override_font_sizes/font_size = 19
text = "Health:

Energy:

Move:"

[node name="Panel" type="Panel" parent="Info/PointsPanel/Label"]
show_behind_parent = true
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_left = -3.0
offset_top = -86.5
offset_right = 73.0
offset_bottom = 89.5
grow_vertical = 2

[node name="FinishButton" type="Button" parent="."]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -278.0
offset_top = -92.4896
offset_right = -149.0
offset_bottom = -45.4895
grow_horizontal = 2
grow_vertical = 0
text = "Finish Selection"

[connection signal="item_selected" from="Info/Header/FamiliarSelector" to="." method="_on_familiar_selected"]
[connection signal="text_changed" from="Info/Header/FamiliarSelector/LineEdit" to="." method="_on_level_changed"]
[connection signal="item_selected" from="Info/MoveInput1" to="." method="_on_move_selected" binds= [1]]
[connection signal="item_selected" from="Info/MoveInput2" to="." method="_on_move_selected" binds= [2]]
[connection signal="item_selected" from="Info/MoveInput3" to="." method="_on_move_selected" binds= [3]]
[connection signal="pressed" from="FinishButton" to="." method="_on_finish_pressed"]
